--- a/.gitignore
+++ b/.gitignore
@@ -432,3 +432,4 @@ PCB-multi-layer/bldcmoter
 PCB-multi-layer/bldcmoter
 PCB-multi-layer/bldcmoter
 PCB-multi-layer/bldcmoter
+Arduino-project/LittleArduinoProjects/
